syntax ="proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;

option java_package = "pr.pulsesynapse.proto";

service TargetService {
  rpc AddTarget(AddTargetRequest) returns (TargetResponse);
  rpc ListMyTargets(google.protobuf.Empty) returns (TargetListResponse);
  rpc DeleteTarget(DeleteTargetRequest) returns (google.protobuf.Empty);
  rpc GetDueTargets(google.protobuf.Empty) returns (TargetListResponse);
}

message AddTargetRequest {
 string name = 1;
 string url = 2;
 int32 check_interval_seconds = 4;
}

message TargetResponse {
  string id = 1;
  string name = 2;
  string url = 3;
  int32 check_interval_seconds = 4;
}

message TargetListResponse {
  repeated TargetResponse targets = 1;
}

message DeleteTargetRequest {
  string id = 1;
}
